Add handling messages in group chats; add TODOs and add minor improvements

--- a/config_example.json
+++ b/config_example.json
@@ -1,4 +1,5 @@
 {
   "api_token": "Your Telegram API token",
-  "db_filename": "local.db"
+  "db_filename": "local.db",
+  "bot_name": "@showlocaltime_bot"
 }
